# edu

./: README.md  commit-files.ps1  commit-files.sh
backend/: .gitignore  API.md  API_DOCUMENTATION.md  CLEANUP_SUMMARY.md  Dockerfile  Makefile  POPULATE_DATA.md  QUICK_START.md  README.md  SETUP_GUIDE.md  docker-compose.yml  nginx.conf  populate_data.bat  populate_data.ps1  populate_data.py  pyproject.toml  setup_admin.py  test_populate.py
backend/apps/catalog/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/catalog/migrations/: 0001_initial.py
backend/apps/common/: admin_site.py  enums.py  exceptions.py  mixins.py  permissions.py
backend/apps/common/utils/: helpers.py  security.py
backend/apps/payments/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/payments/migrations/: 0001_initial.py  0002_order_order_code_and_paid_at.py  0003_populate_order_codes.py
backend/apps/progress/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/quiz/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/users/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/config/: __init__.py  celery.py  celery_config.py  urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py
backend/requirements/: base.txt  dev.txt  prod.txt
backend/scripts/: entrypoint.sh
backend/templates/admin/: base_site.html  index.html
(+99 files in other folders)
